# game-rogue-sdl

./: .dockerignore  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README_RU.md  cmake_install.cmake  docker-compose.yml  game.sh  index.html  main.data  main.js  main.wasm  style.css
.github/workflows/: linux.yml  ubuntu-desktop.yml  webassembly.yml
cmake/: AddGoogleTest.cmake  conanfile.txt
docker/: app.env  nginx.docker  ubuntu.docker
docker/nginx/: emcc.conf
docker/scripts/: build_in_container.sh
lib/: CMakeLists.txt  README.md
lib/macOS/: Info.plist  install.sh
resources/data/: boot_scene.json  level1.json  player.json  resources.json
resources/stub/: index-debug-section.html  index.html  style.css
src/: Components.h  ECS.h  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  main.cpp
src/Classes/: Collision.cpp  Game.cpp  Game.h  IObject.h
src/Classes/DataTypes/: Vector2D.cpp  Vector2D.h
src/Classes/ECS/: Animation.h  CameraComponent.h  ColliderController.h  Collision.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  SpriteComponent.h  TouchController.h  TransformComponent.h
src/Classes/GameObjects/: GameObject.cpp  GameObject.h
src/Classes/Scenes/: Scenes.h
src/Classes/Utilities/: FileLoadManager.cpp  FileLoadManager.h  JsonLoadManager.cpp  JsonLoadManager.h  LoadManager.cpp  LoadManager.h
src/DataTypes/: Vector2D.cpp  Vector2D.h
src/ECS/: ColliderController.h  Components.h  ECS.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TouchController.h  TransformComponent.h
tests/: CMakeLists.txt  TestJsonDeps.cpp  TestLevelLoad.cpp  TestVector2D.cpp
tests/src/: TestRunner.cpp  main.cpp
